--- a/login.html
+++ b/login.html
@@ -5,6 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login Page</title>
     <link rel="stylesheet" href="login.css" />
+    <style>
+      @media only screen and (max-width: 768px) {
+        body {
+          background-size: contain;
+          background-position: top;
+        }
+
+        .main-login {
+          margin: 20px;
+          margin-top: 150px;
+          margin-bottom: 200px;
+        }
+      }
+    </style>
   </head>
   <body background="space.jpg">
     <div class="main-login">
